--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,6 +7,9 @@ on:
       - '.github/workflows/**'
       - 'pyproject.toml'
       - 'uv.lock'
+  pull_request:
+    branches:
+      -  main
 
 jobs:
   test:
