--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bilibili-rater"
-version = "0.1.0"
+version = "0.0.0"
 description = "为在Bilibili上的影视资源自动获取imdb评分"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 authors = [
     {name = "Jack Wang", email = "wang@rjack.cn"}
 ]
@@ -35,6 +35,9 @@ classifiers = [
     "Topic :: Utilities"
 ]
 
-[tool.black]
-line-length = 88
-target-version = ['py312']
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
