--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,22 @@ name = "testpypi"
 url = "https://test.pypi.org/simple/"
 publish-url = "https://test.pypi.org/legacy/"
 explicit = true
+
+[tool.hatch.build]
+exclude = [
+    "**/__pycache__/",
+    "__pycache__/",
+
+    "**/*.pyc",
+    "*.pyc",
+
+    "*.pyo",
+    "*.pyd",
+    ".pyc",
+    "main.py",
+    ".github/",
+    "tests/",
+    "docs/",
+    "changelogs/",
+
+]
