--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -1,4 +1,4 @@
-name: Publish to PyPI and TestPyPI
+name: Test
 on:
   push:
     paths:
@@ -52,3 +52,16 @@ jobs:
       - name: Publish distribution to PyPI
         if: env.IS_RELEASE == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
+
+  publish-github-release:
+    runs-on: ubuntu-latest
+    needs:
+      - testing
+      - pypi-publish
+    if: env.IS_RELEASE == 'true'
+    steps:
+      - uses: actions/checkout@v6
+      - name: Release to Github
+        uses: softprops/action-gh-release@v2
+        with:
+          body_path: changelogs/v0.1.x.md
