--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -53,12 +53,12 @@ jobs:
         if: env.IS_RELEASE == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
 
-  publish-github-release:
+  publish-release:
     runs-on: ubuntu-latest
     needs:
       - testing
       - pypi-publish
-    if: env.IS_RELEASE == 'true'
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v6
       - name: Release to Github
