--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "bilibili-rater"
 version = "0.1.1a1"
 description = "为在Bilibili上的影视资源自动获取imdb评分"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 authors = [
     {name = "Jack Wang", email = "wang@rjack.cn"}
 ]
@@ -16,13 +16,13 @@ license = {text = "GPLv3"}
 urls = {Homepage = "https://github.com/NearlyHeadlessJack/bilibili-rater"}
 dependencies = [
     "bilibili-api-python>=17.4.1",
+    "cinemagoer",
     "httpx>=0.28.1",
     "pytz>=2025.2",
     "requests>=2.32.5",
 ]
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -41,6 +41,9 @@ name = "testpypi"
 url = "https://test.pypi.org/simple/"
 publish-url = "https://test.pypi.org/legacy/"
 explicit = true
+
+[tool.uv.sources]
+cinemagoer = { git = "https://github.com/NearlyHeadlessJack/cinemagoer.git" }
 
 [tool.hatch.build]
 exclude = [
