--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync
+          uv pip install pytest
       - name: Test with pytest
         run: |
-          uv pip install pytest
+          source .venv/bin/activate
           pytest .
