--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.9"
 authors = [
     {name = "Jack Wang", email = "wang@rjack.cn"}
 ]
-license = {text = "GPLv3"}
+license = {file = "LICENSE"}
 urls = {Homepage = "https://github.com/NearlyHeadlessJack/bilibili-rater"}
 dependencies = [
     "bilibili-api-python>=17.4.1",
