--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bilibili-rater"
-version = "0.1.1a1"
+version = "0.1.1b1"
 description = "为在Bilibili上的影视资源自动获取imdb评分"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -17,7 +17,6 @@ urls = {Homepage = "https://github.com/NearlyHeadlessJack/bilibili-rater"}
 dependencies = [
     "bilibili-api-python>=17.4.1",
     "httpx>=0.28.1",
-    "imdbinfo>=0.6.7",
     "pytz>=2025.2",
     "requests>=2.32.5",
 ]
