--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -8,19 +8,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10","3.11","3.12","3.13","3.14"]
+        python-version: ["3.9","3.10","3.11","3.12","3.13","3.14"]
 
     steps:
       - uses: actions/checkout@v6
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v6
+      - name: Set Up uv
+        uses: astral-sh/setup-uv@v7
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest
+          uv sync
+          uv pip install pytest
       - name: Test with pytest
         run: |
+          source .venv/bin/activate
           pytest .
