--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,14 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bilibili-rater"
-version = "0.1.1a1"
+version = "0.1.1b1"
 description = "为在Bilibili上的影视资源自动获取imdb评分"
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [
     {name = "Jack Wang", email = "wang@rjack.cn"}
 ]
-license = {text = "GPLv3"}
+license = {file = "LICENSE"}
 urls = {Homepage = "https://github.com/NearlyHeadlessJack/bilibili-rater"}
 dependencies = [
     "bilibili-api-python>=17.4.1",
