--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,11 @@ wheels/
 share/python-wheels/
 *.egg-info/
 .idea
+t/
 .installed.cfg
 *.egg
 MANIFEST
+main.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -51,6 +53,7 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+.bilibiliratercache/
 
 # Translations
 *.mo
@@ -201,6 +204,7 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
 
 # Marimo
 marimo/_static/
