--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "bilibili-rater"
 version = "0.1.2a1"
 description = "为在Bilibili上的影视资源自动获取imdb评分"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 authors = [
     {name = "Jack Wang", email = "wang@rjack.cn"}
 ]
@@ -17,13 +17,12 @@ urls = {Homepage = "https://github.com/NearlyHeadlessJack/bilibili-rater"}
 dependencies = [
     "bilibili-api-python>=17.4.1",
     "httpx>=0.28.1",
-    "imdbinfo==0.6.7",
+    "imdbinfo>=0.7.0",
     "pytz>=2025.2",
     "requests>=2.32.5",
 ]
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
