--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "bilibili-rater"
-version = "0.1.2a1"
+version = "0.1.2rc1"
 description = "为在Bilibili上的影视资源自动获取imdb评分"
 readme = "README.md"
 requires-python = ">=3.10"
